<resources>
    <string name="app_name">Electives</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="staff_login">Staff Login</string>
    <string name="student_login">Student Login</string>
    <string name="welcome_to_the_new_2020_myclassroom_site">Welcome to the new 2020 MyClassroomsite</string>
    <string name="the_official_cput_learner_management_system_for_registered_staff_and_student">the official CPUT Learner Management System for registered staff and student</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">email</string>
    <string name="year">Year</string>
    <string name="_1">1</string>
</resources>